tests/snapshots/gossip_snapshot__asymmetric_message_targets_unbatch_the_run.snap
---
source: tests/gossip_snapshot.rs
expression: "capture_gossip(a, b)"
---
direction A -> B
role: Responder
control item 0 (30 bytes) / preamble /
55799_1([
    "rumors",
    2,
    h'b2f7f581d6de3c06a822fd6e7e8265fb',
    0,
])
control item 1 (136 bytes) / greeting /
24_0(<<{
    "listing": {
        144_0: h'5b9b4e07e489554d42eef4b5c4a7ae87f5483a12455d0b4f',
    },
    "set_len": 2,
    "version": 53846_1(h'400fff001ff9'),
    "max_version_bytes": 6,
    "payload_depth_limit": 256_1,
    "target_message_size": 1830400_2,
}>>)
control item 2 (2 bytes) / epilogue /
"."
Responder stream 0 (height 31), epoch 0, 47 wire bytes
  frame 0 (22 bytes) / Supply(Continue) /
[0, 6, 63_0(<<63_0(<<53846_1(h'40120c009010'), 575_1>>)>>)]
  frame 1 (20 bytes) / Supply(End) /
[0, 7, 63_0(<<63_0(<<53846_1(h'4042c02110'), 131_0>>)>>)]
  frame 2 (3 bytes) / End(Stream) /
[0, 9]

direction B -> A
role: Initiator
control item 0 (30 bytes) / preamble /
55799_1([
    "rumors",
    2,
    h'b2f7f581d6de3c06a822fd6e7e8265fb',
    0,
])
control item 1 (99 bytes) / greeting /
24_0(<<{
    "listing": {},
    "set_len": 0,
    "version": 53846_1(h'e0'),
    "max_version_bytes": 0,
    "payload_depth_limit": 256_1,
    "target_message_size": 0,
}>>)
control item 2 (2 bytes) / epilogue /
"."
