tests/snapshots/gossip_snapshot__both_redact_same_key.snap
---
source: tests/gossip_snapshot.rs
expression: "capture_gossip(a, b)"
---
direction A -> B
preamble: 25 bytes
  0000: 52 55 4d 4f 52 53 00 02
  0008: 8c 18 96 68 c9 e4 83 72
  0010: 37 bf 31 e0 2d 7f 6b 70
  0018: 00
version: (2, 1, 0)
version frame: 22 bytes
  0000: 00 00 00 12 01 00 00 00
  0008: 00 00 00 00 01 00 00 00
  0010: 00 00 00 00 b2 40
listing frame: 25 bytes
  0000: 00 00 00 15 01 00 00 00
  0008: fe 80 a3 55 90 2f 7a 57
  0010: 8f 97 d3 1a 5b 78 d8 24
  0018: a8
Responder stream 0 (height 31), epoch 0
  frame 0: Match(End)
    0000: 11
  frame 1: End(Stream)
    0000: 99
trailing frame: 1 bytes
  0000: 2e

direction B -> A
preamble: 25 bytes
  0000: 52 55 4d 4f 52 53 00 02
  0008: 8c 18 96 68 c9 e4 83 72
  0010: 37 bf 31 e0 2d 7f 6b 70
  0018: 00
version: (2, 0, 1)
version frame: 22 bytes
  0000: 00 00 00 12 01 00 00 00
  0008: 00 00 00 00 01 00 00 00
  0010: 00 00 00 00 b4 80
listing frame: 25 bytes
  0000: 00 00 00 15 01 00 00 00
  0008: fe 80 a3 55 90 2f 7a 57
  0010: 8f 97 d3 1a 5b 78 d8 24
  0018: a8
trailing frame: 1 bytes
  0000: 2e
