tests/snapshots/gossip_snapshot__bulk_initiator_ships_opening_supplies.snap
---
source: tests/gossip_snapshot.rs
expression: capture
---
direction A -> B
role: Initiator
control item 0 (30 bytes) / preamble /
55799_1([
    "rumors",
    2,
    h'b2f7f581d6de3c06a822fd6e7e8265fb',
    0,
])
control item 1 (134 bytes) / greeting /
24_0(<<{
    "listing": {
        154_0: h'fff22c04c986261bb486eb580d11a38f011b4c6b326f7a13',
    },
    "set_len": 2,
    "version": 53846_1(h'40ff01f9'),
    "max_version_bytes": 3,
    "payload_depth_limit": 256_1,
    "target_message_size": 1830400_2,
}>>)
control item 2 (2 bytes) / epilogue /
"."
Initiator stream 0 (height 31), epoch 0, 33 wire bytes
  frame 0 (28 bytes) / Supply(End) /
[
    0,
    7,
    63_0(<<63_0(<<53846_1(h'437069'), 25_0>>), 63_0(<<53846_1(h'4934'), 2>>)>>),
]
  frame 1 (3 bytes) / End(Stream) /
[0, 9]
Initiator stream 1 (height 30), epoch 0, 8 wire bytes
  frame 0 (3 bytes) / End(Reply) /
[1, 8]
  frame 1 (3 bytes) / End(Stream) /
[1, 9]

direction B -> A
role: Responder
control item 0 (30 bytes) / preamble /
55799_1([
    "rumors",
    2,
    h'b2f7f581d6de3c06a822fd6e7e8265fb',
    0,
])
control item 1 (188 bytes) / greeting /
24_0(<<{
    "listing": {
        173_0: h'c427db6fe92e923509619eb51d8a601e31b985ac24a3baa2',
        232_0: h'a82ff6a5e3f64d4901f633ca61b549cfa54be033845641db',
        241_0: h'871321571b8582637fc4d52dc6df1c0f865df999eaab42f2',
    },
    "set_len": 3,
    "version": 53846_1(h'7077'),
    "max_version_bytes": 2,
    "payload_depth_limit": 256_1,
    "target_message_size": 1830400_2,
}>>)
control item 2 (2 bytes) / epilogue /
"."
Responder stream 0 (height 31), epoch 0, 61 wire bytes
  frame 0 (3 bytes) / QueryEmpty(Continue) /
[0, 2]
  frame 1 (18 bytes) / Supply(Continue) /
[0, 6, 63_0(<<63_0(<<53846_1(h'72c0'), 10001_1>>)>>)]
  frame 2 (18 bytes) / Supply(Continue) /
[0, 6, 63_0(<<63_0(<<53846_1(h'73c0'), 10002_1>>)>>)]
  frame 3 (17 bytes) / Supply(End) /
[0, 7, 63_0(<<63_0(<<53846_1(h'77'), 10000_1>>)>>)]
  frame 4 (3 bytes) / End(Stream) /
[0, 9]
