tests/snapshots/gossip_snapshot__early_supplies_honor_redactions.snap
---
source: tests/gossip_snapshot.rs
expression: capture
---
direction A -> B
role: Initiator
control item 0 (30 bytes) / preamble /
55799_1([
    "rumors",
    2,
    h'b2f7f581d6de3c06a822fd6e7e8265fb',
    0,
])
control item 1 (137 bytes) / greeting /
24_0(<<{
    "listing": {
        142_0: h'3ddb8ec8897a61fed8827fda50bea5f4ec959f2ab9cf4826',
    },
    "set_len": 2,
    "version": 53846_1(h'4002003000fff4'),
    "max_version_bytes": 5,
    "payload_depth_limit": 256_1,
    "target_message_size": 1830400_2,
}>>)
control item 2 (2 bytes) / epilogue /
"."
Initiator stream 0 (height 31), epoch 0, 25 wire bytes
  frame 0 (20 bytes) / Supply(End) /
[0, 7, 63_0(<<63_0(<<53846_1(h'4073403910'), 229_0>>)>>)]
  frame 1 (3 bytes) / End(Stream) /
[0, 9]
Initiator stream 1 (height 30), epoch 0, 8 wire bytes
  frame 0 (3 bytes) / End(Reply) /
[1, 8]
  frame 1 (3 bytes) / End(Stream) /
[1, 9]

direction B -> A
role: Responder
control item 0 (30 bytes) / preamble /
55799_1([
    "rumors",
    2,
    h'b2f7f581d6de3c06a822fd6e7e8265fb',
    0,
])
control item 1 (189 bytes) / greeting /
24_0(<<{
    "listing": {
        30_0: h'ea962c263b019bd428a49dbac092f24ffb46a14a869077e0',
        33_0: h'4e79398dd559d56b1b8353d7724c44d431918c96b4876923',
        143_0: h'26ae24b07cd93ba2329a78559e9b77e820f8a3e9b99d928a',
    },
    "set_len": 3,
    "version": 53846_1(h'541ec0'),
    "max_version_bytes": 2,
    "payload_depth_limit": 256_1,
    "target_message_size": 1830400_2,
}>>)
control item 2 (2 bytes) / epilogue /
"."
Responder stream 0 (height 31), epoch 0, 62 wire bytes
  frame 0 (18 bytes) / Supply(Continue) /
[0, 6, 63_0(<<63_0(<<53846_1(h'54b0'), 10000_1>>)>>)]
  frame 1 (18 bytes) / Supply(Continue) /
[0, 6, 63_0(<<63_0(<<53846_1(h'54f0'), 10001_1>>)>>)]
  frame 2 (3 bytes) / QueryEmpty(Continue) /
[0, 2]
  frame 3 (18 bytes) / Supply(End) /
[0, 7, 63_0(<<63_0(<<53846_1(h'544c'), 10002_1>>)>>)]
  frame 4 (3 bytes) / End(Stream) /
[0, 9]
