tests/snapshots/gossip_snapshot__empty_pair_converges_immediately.snap
---
source: tests/gossip_snapshot.rs
expression: "capture_gossip(a, b)"
---
direction A -> B
control item 0 (30 bytes) / preamble /
55799_1([
    "rumors",
    2,
    h'b2f7f581d6de3c06a822fd6e7e8265fb',
    0,
])
control item 1 (103 bytes) / greeting /
24_0(<<{
    "listing": {},
    "set_len": 0,
    "version": 53846_1(h'e0'),
    "max_version_bytes": 0,
    "payload_depth_limit": 256_1,
    "target_message_size": 1830400_2,
}>>)
control item 2 (2 bytes) / epilogue /
"."

direction B -> A
control item 0 (30 bytes) / preamble /
55799_1([
    "rumors",
    2,
    h'b2f7f581d6de3c06a822fd6e7e8265fb',
    0,
])
control item 1 (103 bytes) / greeting /
24_0(<<{
    "listing": {},
    "set_len": 0,
    "version": 53846_1(h'e0'),
    "max_version_bytes": 0,
    "payload_depth_limit": 256_1,
    "target_message_size": 1830400_2,
}>>)
control item 2 (2 bytes) / epilogue /
"."
