tests/snapshots/gossip_snapshot__fork_insert_redact.snap
---
source: tests/gossip_snapshot.rs
expression: "capture_gossip(a, b)"
---
direction A -> B
role: Responder
control item 0 (30 bytes) / preamble /
55799_1([
    "rumors",
    2,
    h'b2f7f581d6de3c06a822fd6e7e8265fb',
    0,
])
control item 1 (159 bytes) / greeting /
24_0(<<{
    "listing": {
        8: h'711c107a02ffed39979bcdd86654134ee8bb931687a03a29',
        130_0: h'ad151bc8bfcf8e311bf94802769422676fec3e83d495d637',
    },
    "set_len": 2,
    "version": 53846_1(h'4b24'),
    "max_version_bytes": 2,
    "payload_depth_limit": 256_1,
    "target_message_size": 1830400_2,
}>>)
control item 2 (2 bytes) / epilogue /
"."
Responder stream 0 (height 31), epoch 0, 27 wire bytes
  frame 0 (16 bytes) / Supply(Continue) /
[0, 6, 63_0(<<63_0(<<53846_1(h'4950'), 3>>)>>)]
  frame 1 (3 bytes) / QueryEmpty(Continue) /
[0, 2]
  frame 2 (3 bytes) / QueryEmpty(End) /
[0, 3]
  frame 3 (3 bytes) / End(Stream) /
[0, 9]

direction B -> A
role: Initiator
control item 0 (30 bytes) / preamble /
55799_1([
    "rumors",
    2,
    h'b2f7f581d6de3c06a822fd6e7e8265fb',
    0,
])
control item 1 (160 bytes) / greeting /
24_0(<<{
    "listing": {
        142_0: h'1b5c7a2a860aa40597f61b26a1d3d54b48591068e45aed32',
        152_0: h'387ecab186fe71c89d5894b895f5917b7549e591ce2f098c',
    },
    "set_len": 2,
    "version": 53846_1(h'5cb0'),
    "max_version_bytes": 2,
    "payload_depth_limit": 256_1,
    "target_message_size": 1830400_2,
}>>)
control item 2 (2 bytes) / epilogue /
"."
Initiator stream 0 (height 31), epoch 0, 21 wire bytes
  frame 0 (16 bytes) / Supply(End) /
[0, 7, 63_0(<<63_0(<<53846_1(h'5dc0'), 4>>)>>)]
  frame 1 (3 bytes) / End(Stream) /
[0, 9]
Initiator stream 1 (height 30), epoch 0, 11 wire bytes
  frame 0 (3 bytes) / End(Reply) /
[1, 8]
  frame 1 (3 bytes) / End(Reply) /
[1, 8]
  frame 2 (3 bytes) / End(Stream) /
[1, 9]
