tests/snapshots/gossip_snapshot__one_sided_transfer.snap
---
source: tests/gossip_snapshot.rs
expression: "capture_gossip(a, b)"
---
direction A -> B
role: Responder
control item 0 (30 bytes) / preamble /
55799_1([
    "rumors",
    2,
    h'b2f7f581d6de3c06a822fd6e7e8265fb',
    0,
])
control item 1 (160 bytes) / greeting /
24_0(<<{
    "listing": {
        82_0: h'b0425f1120b0c131ab72af780c67564c0340de7049ea3580',
        121_0: h'9602973f461003f36f18b1ccb468d352b1f1a711efc1e963',
    },
    "set_len": 2,
    "version": 53846_1(h'5c90'),
    "max_version_bytes": 2,
    "payload_depth_limit": 256_1,
    "target_message_size": 1830400_2,
}>>)
control item 2 (2 bytes) / epilogue /
"."
Responder stream 0 (height 31), epoch 0, 37 wire bytes
  frame 0 (16 bytes) / Supply(Continue) /
[0, 6, 63_0(<<63_0(<<53846_1(h'5c90'), 2>>)>>)]
  frame 1 (16 bytes) / Supply(End) /
[0, 7, 63_0(<<63_0(<<53846_1(h'5540'), 1>>)>>)]
  frame 2 (3 bytes) / End(Stream) /
[0, 9]

direction B -> A
role: Initiator
control item 0 (30 bytes) / preamble /
55799_1([
    "rumors",
    2,
    h'b2f7f581d6de3c06a822fd6e7e8265fb',
    0,
])
control item 1 (103 bytes) / greeting /
24_0(<<{
    "listing": {},
    "set_len": 0,
    "version": 53846_1(h'e0'),
    "max_version_bytes": 0,
    "payload_depth_limit": 256_1,
    "target_message_size": 1830400_2,
}>>)
control item 2 (2 bytes) / epilogue /
"."
